[package]
name = "webwall"
version = "0.1.0"
authors = ["Udon"]
edition = "2024"
description = "A simple HTML wallpaper setter for Wayland"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["wallpaper", "wayland"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
gdk4-wayland = "0.9.6"
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
url = "2.5.4"
webkit6 = "0.4.0"