[package]
name = "livelayer"
version = "0.1.0"
authors = ["Udon"]
edition = "2024"
description = "Live wallpaper utility for Linux"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["wallpaper", "wayland", "html", "live"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
gdk4-wayland = "0.9.6"
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
url = "2.5.4"
webkit6 = "0.4.0"